--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+body {
+  background: linear-gradient(to bottom, #171a21, #1b2838, #2a475e, #66c0f4);
+}
 /* Legend */
 #pack-legend {
     font-family: 12px Noto Sans JP;
