--- a/css/style.css
+++ b/css/style.css
@@ -206,12 +206,35 @@ body {
   color: #666;
 }
 
-rect.overlay {
-  stroke: black;
+.filter-panel .filter-languages {
+  height: 120px; /* Adjust height as needed */
+}
+
+.filter-panel .filter-languages div {
+  height: 12px;
+  align-items: center;
+  margin-bottom: 10px; /* Adjust as needed */
+}
+
+/* Styling for the labels of the checkboxes */
+.filter-panel .filter-languages label {
+  margin-top: -17px;
+  cursor: pointer; /* Change cursor to pointer on hover */
+  font-size: 0.4em; /* Slightly smaller font size */
+  color: #333; /* Dark grey text color */
+}
+
+/* Styling for the checkboxes */
+.filter-panel .filter-languages input[type='checkbox'] {
+  margin-right: 5px; /* Space between checkbox and label */
 }
 
 .filter svg {
   margin-left: -20px;
+}
+
+rect.overlay {
+  stroke: black;
 }
 
 rect.selection {
