--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,13 @@ background: #2a475e;
 top: 66.6%;
 background: #66c0f4;
 }
+img {
+  position: absolute;
+  width: 300px;
+  margin-left: 850px;
+  margin-top: 320px;
+  z-index: 3;
+}
 #head {
   background-color: #ffffff;
   width: 1000px;
